--- a/src/app/sareebillpage/sareebillpage.component.html
+++ b/src/app/sareebillpage/sareebillpage.component.html
@@ -7,18 +7,18 @@
   <div class="row form-inline">
     <div class="col-sm-3" >
       <div class="alignleft">
-        <h3 >
+        <h2 >
           <small >Cell : 97914 26926</small><br>
           <small >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 94437 71179</small>
-      </h3>
+      </h2>
       </div>
     </div>
     <div class="col-sm-6 text-center">
       <br>
-        <h4  style="border-style: ridge;">
+        <h3  style="border-style: ridge;">
             TAX INVOICE<br>
             <p >CASH/CREDIT BILL</p>
-        </h4> 
+        </h3> 
         <p style="border-style: ridge;font-size: x-large;padding: 3px 3px;">GSTIN : 33BKMPA0961M1Z5</p>
         
     </div>
@@ -121,7 +121,7 @@
       <div class="col-sm-4">
         <p style="border-style: ridge;" class="text-center">Subject to Salem Jurisdiction</p>
         <p class="alignleft">Bank Details:</p>
-        <p class="alignleft"><br>
+        <p class="alignleft" style="font-size: large;"><br>
           <span>Name : Shree jeyam silvers,</span><br>
           <span>Bank Name - Indian Overseas Bank,</span><br>
           <span>A/c No. - 014902000002879,</span><br>
@@ -167,6 +167,9 @@
     <div class="row">
       <div class="col-sm-12" style="border-style: ridge;padding: 6px 6px;">
         <label  for="Rupees"><b>Rupees (In Words): </b>&nbsp;{{rupessinwords | uppercase}}</label><br>
+      </div><br>
+      <div class="col-sm-12 text-center" style="border-style: ridge;padding: 6px 6px;">
+        <label  for="Rupees" ><b> * Goods once sold will not be exchange or taken back</b></label><br>
       </div>
       <div class="col-sm-6">
         <br>
@@ -181,7 +184,7 @@
         <br>
         <p class="text-center" style="border-style: ridge;padding: 6px 6px;">
           <b><span><b><small>For</small></b>&nbsp;SHREE JEYAM SILVERS</span></b><br>
-          <span></span><br>
+          <span>Subject to salem Jurisdiction  E&OE</span><br>
           <span></span><br><br>
           <span>Proprietor</span><br>
         </p>
