--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,16 +8,16 @@
           <div class="alert alert-secondary" role="alert">
             Total Saree Bill : {{sareebillcount || "Loading"}}
           </div>
+          <div class="alert alert-warning" role="alert">
+           Total Product Bill : {{productbillcount || "Loading"}}
+         </div> 
           <div class="alert alert-success" role="alert">
             Total Saree Product : {{ sareeproductcount || "Loading"}}
           </div>
           <div class="alert alert-danger" role="alert">
             Total Product : {{productcount || "Loading"}}
           </div>
-          <!-- <div class="alert alert-warning" role="alert">
-            This is a warning alert—check it out!
-          </div>
-          <div class="alert alert-info" role="alert">
+          <!-- <div class="alert alert-info" role="alert">
             This is a info alert—check it out!
           </div>
           <div class="alert alert-light" role="alert">
