--- a/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
+++ b/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
@@ -1,27 +1,28 @@
 
-<button (click)="printdata();">Print</button>
-<div id="example" style="padding:0px 6px 0px 6px;">
-    <br><br><br>
+<button type="button" class="btn btn-primary" (click)="printdata();">Print</button>
+
+<div id="example" style="margin:0px 6px 0px 6px;">
+    <br>
 <div class="container" style="border-style: ridge;" >
   <div class="row form-inline">
-    <div class="col-sm-4" >
+    <div class="col-sm-3" >
       <div class="alignleft">
-        <h3 >
+        <h2 >
           <small >Cell : 97914 26926</small><br>
           <small >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 94437 71179</small>
-      </h3>
+      </h2>
       </div>
     </div>
-    <div class="col-sm-4 text-center">
+    <div class="col-sm-6 text-center">
       <br>
-        <h4  style="border-style: ridge;">
-            TAX INVOICE<br>
+        <h3  style="border-style: ridge;">
+            SILVER TAX INVOICE<br>
             <p >CASH/CREDIT BILL</p>
-        </h4> 
-        <p style="border-style: ridge;">GSTIN : 33BKMPA0961M1Z5</p>
+        </h3> 
+        <p style="border-style: ridge;font-size: x-large;padding: 3px 3px;">GSTIN : 33BKMPA0961M1Z5</p>
         
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="alignright">
       <input class="form-check-input" type="checkbox"> Original For Recipient<br>
       <input class="form-check-input" type="checkbox"> Duplicate For Transporter<br>
@@ -29,20 +30,29 @@
     </div>
     </div>
   </div>
-    <div class="text-center">
-        <h3  style="border-style: ridge;padding:6px 6px;">
-            <span class="text-left"><img src="../../assets/photo/vinayaga.jpg" style="width:50px;height:50px;">
-            </span>
-            SHREE JEYAM SILVERS
-            <span class="text-right"><img src="../../assets/photo/murugan.jpg" style="width:50px;height:50px;">
-            </span>
-            <br>
-            <small >Manufactures of Silver Ornaments</small><br>
-            <small >14/6 , Thammannan Street,Gugai,Salem - 636006</small>
-        </h3>
+  <div class="row" style="border-style: ridge;margin:6px 6px 6px 6px;">
+    <div class="col-sm-3"> <br>
+      <span ><img src="../../assets/photo/vinayaga.jpg" style="width:120px;height:120px;">
+      </span>
+    </div>
+    <div class="col-sm-6"> <br>
+      <p style="font-size: large;" class="text-center"><b>SHREE JEYAM SILVERS & SAREES</b></p>
+        <p class="text-center">Wholesale and Retail<br>
+          <span>31, Chairman Ramalingam Street, </span><br>
+          <span>(Opposite to paavadi girls higher secondary school), </span><br>
+          <span> Salem - 636 001.</span>
+        </p>          
+        </div>
+    <div class="col-sm-3"> <br>
+      <span><img src="../../assets/photo/murugan.jpg" style="width:120px;height:120px;">
+      </span>
+    </div>
+  </div>
+      <div class="text-center">
+        
         <div class="row">
         <div class="col-sm-6"> 
-          <input type="text" value="Vehical No:" class="form-control">
+          <input type="text" value="{{'Vehicle No:'}}" class="form-control">
           <input type="text" value="Date & Time of Supply:" class="form-control">
           <input type="text" value="Place of Supply:" class="form-control">
           <input type="text" value="Trasportation Mode:(Own/Hired)" class="form-control">
@@ -50,8 +60,8 @@
           
         </div>
         <div class="col-sm-6"> 
-          <input type="text" value="Invoice No:" class="form-control">
-          <input type="text" value="Invoice Date:" class="form-control">
+          <input type="text" value="Invoice No: {{api.billingarray_nonincgst.invoiceno || 'xxx'}}" class="form-control">
+          <input type="text" value="Invoice Date: {{api.billingarray_nonincgst.invoicedate || 'xxx'}}" class="form-control">
           <input type="text" value="State & Code: TamilNadu & 33" class="form-control">
 
           <!-- <table  class="table table-bordered table-sm">
@@ -64,35 +74,44 @@
           </table> -->
       </div>
           </div>
-      </div>
+      </div><br>
     <div class="row">
       <div class="col-sm-12">  
         <div style="border-style:ridge;padding:6px 6px;">
-             <label class="text-right" for="cus_address">Customer Name:&nbsp;{{api.billingobject.customerdetails.customername || "xxx"}}</label><br>
-            <label  for="cus_address">Phone Number:&nbsp;{{api.billingobject.customerdetails.phoneumber || "xxx"}}</label><br>
-            <label  for="cus_address">Address:&nbsp;{{api.billingobject.customerdetails.address || "xxx"}}</label><br>
+             <label class="text-right" for="cus_address">Customer Name:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.customername || "xxx"}}</b></label><br>
+            <label  for="cus_address">Phone Number:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.phoneumber || "xxx"}}</b></label><br>
+            <label  for="cus_address">Address:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.address || "xxx"}}</b></label><br>
           </div>
       </div>
           <!-- <div class="col-sm-6">                    
             <label  for="cus_address">Mail:&nbsp;{{api.billingobject.customerdetails.emailid || "xxx"}}</label><br>
             <label  for="cus_address">Adhaar:&nbsp;{{api.billingobject.customerdetails.adhaarid || "xxx"}}</label><br>
           </div> -->
-        </div>
+        </div><br>
           <div class="row">
         <div class="table-responsive-sm col-sm-12">           
 <table  class="table table-bordered table-sm">
   <thead>
-    <tr class="text-center">
+    <tr>
         <th>Sno</th>
         <th>Description</th>
+      <!-- <th>HSN Code</th>
+      <th>Quantity</th>
       <th>Rate</th>
+      <th>Discount</th>
+      <th>Total</th> -->
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let items of api.billingobject.tabledatadet;index as i;">
-      <td class="text-center">{{i+1}} .</td>
+    <tr *ngFor="let items of api.billingarray_nonincgst.tabledatadet;index as i;">
+      <td>{{i+1}} .</td>
       <td>{{ items.productname}}</td>
-      <td>{{items.rate}} &#x20B9;</td>
+      <!-- <td>{{items.sareehsncode}}</td>
+      <td>{{ items.collected.qty}}</td>
+      <td>&#x20B9; {{ items.sareerate}}</td>
+      <td>&#x20B9; {{ items.collected.dis}}</td>
+      <td>&#x20B9; {{ items.total}}</td> -->
+
     </tr>
   </tbody>
 </table>
@@ -101,42 +120,44 @@
     <div class="row">
       <div class="col-sm-4">
         <p style="border-style: ridge;" class="text-center">Subject to Salem Jurisdiction</p>
-        <p class="alignleft">Bank Details:</p><br>
-        <p class="alignleft">
-          <span>Bank Name - KARNATAKA BANK LIMITED,</span><br>
-          <span>A/c No. - 7162000100865901,</span><br>
-          <span> IFSC Code - KARB0000716 </span></p>
+        <p class="alignleft">Bank Details:</p>
+        <p class="alignleft" style="font-size: large;"><br>
+          <span>Name : Shree jeyam silvers,</span><br>
+          <span>Bank Name - Indian Overseas Bank,</span><br>
+          <span>A/c No. - 014902000002879,</span><br>
+          <span> IFSC Code - IOBA0000149 </span></p>
       </div>
       <div class="col-sm-8">
         <table  class="table table-bordered table-sm">
               <thead>
                 <tr>
-                    <th class="text-right"><small>{{ "Total Amount Before Tax"}}</small></th>
-                    <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.totamt}} &#x20B9;</td>              
+                    <th class="text-right">{{ "Total Amount Before Tax"}}</th>
+                    <td class="text-center">&#x20B9; {{api.billingarray_nonincgst.tax_details.taxdet_totalamountbeforetax}}</td>              
+                    <!-- <td class="text-center">{{api.billingarray_nonincgst.tax_details.totamt}} &#x20B9;</td>               -->
                 </tr>
                 <tr>
-                  <th class="text-right"><small>{{ "GST Percent"}}</small></th>
-                  <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.tottaxpercent}} %</td>
-              </tr>
-              <tr>
-                <th class="text-right"><small>{{ "GST Tax Amount"}}</small></th>
-                <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.taxamt}} &#x20B9;</td>            
-            </tr>
+                  <!-- <th class="text-right"><small>{{ "GST Percent"}}</small></th>
+                  <td class="text-center">{{api.billingarray_nonincgst.tax_details.tottaxpercent}} %</td> -->
+              </tr>              
             <tr>
-              <th class="text-right"><small>{{ "Add CGST 1.5 %"}}</small></th>
-              <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.cgsttax}} &#x20B9;</td>
+              <th class="text-right">{{ "Tax of CGST 1.5 %"}}</th>
+              <td class="text-center">&#x20B9; {{api.billingarray_nonincgst.tax_details.taxdet_totalamountofcgsttax}} </td>
             </tr>
           <tr>
-            <th class="text-right"><small>{{ "Add SGST 1.5 %"}}</small></th>
-            <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.sgsttax}} &#x20B9;</td>
+            <th class="text-right">{{ "Tax of SGST 1.5 %"}}</th>
+            <td class="text-center">&#x20B9; {{api.billingarray_nonincgst.tax_details.taxdet_totalamountofsgsttax}} </td>
           </tr>
-        <tr>
-          <th class="text-right"><small>{{ "Total Amount After Tax"}}</small></th>
-          <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.totamtwithtax}} &#x20B9;</td>
+          <tr>
+            <th class="text-right">{{ "Total Tax Amount"}}</th>
+            <td class="text-center">&#x20B9; {{api.billingarray_nonincgst.tax_details.taxdet_totalamountoftax}} </td>            
         </tr>
+        <!-- <tr>
+          <th class="text-right">{{ "Total Amount After Tax"}}</th>
+          <td class="text-center">{{api.billingarray_nonincgst.tax_details.totamtwithtax}} </td>
+        </tr> -->
         <tr>
-          <th class="text-right"><small>{{ "Round off"}}</small></th>
-          <td class="text-center">{{api.billingobject.tax_details_addtional_bill_1.roundoff}} &#x20B9;</td>
+          <th class="text-right"><h2>{{ "Total Amount After Tax"}}</h2></th>
+          <td class="text-center"><h2>&#x20B9; {{api.billingarray_nonincgst.tax_details.taxdet_totalamountaftertax}} </h2></td>
         </tr>
               </thead>
           </table>
@@ -144,8 +165,11 @@
     </div>
     <!-- <hr> -->
     <div class="row">
-      <div class="col-sm-12">
-        <input type="text" class="form-control" value="Rupees">
+      <div class="col-sm-12" style="border-style: ridge;padding: 6px 6px;">
+        <label  for="Rupees"><b>Rupees (In Words): </b>&nbsp;{{rupessinwords | uppercase}}</label><br>
+      </div><br>
+      <div class="col-sm-12 text-center" style="border-style: ridge;padding: 6px 6px;">
+        <label  for="Rupees" ><b> * Goods once sold will not be exchange or taken back Subject to salem Jurisdiction  E&OE</b></label><br>
       </div>
       <div class="col-sm-6">
         <br>
@@ -159,9 +183,9 @@
       <div class="col-sm-6">
         <br>
         <p class="text-center" style="border-style: ridge;padding: 6px 6px;">
-          <span><small>For</small>&nbsp;SHREE JEYAM SILVERS</span><br>
+          <b><span><b><small>For</small></b>&nbsp;SHREE JEYAM SILVERS</span></b><br>
           <span></span><br>
-          <span></span><br>
+          <span></span><br><br>
           <span>Proprietor</span><br>
         </p>
       </div>
