--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -7,7 +7,7 @@
                 <div class="card-body">  
                   <div class="row">
                     <div class="col-sm-4">
-                      <form  [formGroup]="productForm" >
+                      <form  [formGroup]="productForm" autocomplete="off">
 
                     <mat-form-field  appearance="outline" class="example-full-width">
                       <mat-label>Product Name</mat-label>
@@ -25,12 +25,12 @@
                         <input matInput formControlName="qty" >
                       </mat-form-field> -->
   
-                      <mat-form-field appearance="outline" class="example-full-width">                        
+                      <!-- <mat-form-field appearance="outline" class="example-full-width">                        
                             <mat-label>Choose a date</mat-label>
                             <input matInput formControlName="date" [matDatepicker]="picker">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>                          
-                      </mat-form-field>
+                      </mat-form-field> -->
 
                       </form>                
                   </div>
