--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -28,12 +28,12 @@
                         <mat-label>HSN Code</mat-label>
                         <input matInput formControlName="sareehsncode"  required>
                       </mat-form-field>  
-                      <mat-form-field appearance="outline"  class="example-full-width">                        
+                      <!-- <mat-form-field appearance="outline"  class="example-full-width">                        
                             <mat-label>Choose a date</mat-label>
                             <input matInput formControlName="date" [matDatepicker]="picker" required>
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>                          
-                      </mat-form-field>
+                      </mat-form-field> -->
                       </form>                
                   </div>
 
