--- a/src/app/sareeproductgst/sareeproductgst.component.html
+++ b/src/app/sareeproductgst/sareeproductgst.component.html
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-header text-center">
                   <h1>SHREE JEYAM SILVERS</h1>
-                  <h3>14/6 , Thammannan Street,Gugai,Salem - 636006</h3>
+                  <h3>31, Chairman Ramalingam Street, Salem - 636 001.</h3>
                 </div>
                 <div class="card-header">
                     <div class="row">  
