--- a/src/app/includedgstbillpage/includedgstbillpage.component.html
+++ b/src/app/includedgstbillpage/includedgstbillpage.component.html
@@ -69,7 +69,7 @@
           <label  class="text-left form-control" for="invoice">Invoice No: &nbsp;<b>{{api.billingarray_incgst.invoiceno || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">Invoice Date: &nbsp;<b>{{api.billingarray_incgst.invoicedate || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">State & Code: &nbsp;<b>{{'TamilNadu & 33'}}</b></label>
-          <label  class="text-left form-control" for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
+         
 
 
       </div>
@@ -81,6 +81,7 @@
              <label class="text-right" for="cus_address">Customer Name:&nbsp;<b>{{api.billingarray_incgst.customerdetails.customername || "xxx"}}</b></label><br>
             <label  for="cus_address">Phone Number:&nbsp;<b>{{api.billingarray_incgst.customerdetails.phoneumber || "xxx"}}</b></label><br>
             <label  for="cus_address">Address:&nbsp;<b>{{api.billingarray_incgst.customerdetails.address || "xxx"}}</b></label><br>
+            <label  for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
           </div>
       </div>
           <!-- <div class="col-sm-6">                    
