--- a/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
+++ b/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
@@ -68,7 +68,6 @@
           <label  class="text-left form-control" for="invoice">Invoice No: &nbsp;<b>{{api.billingarray_nonincgst.invoiceno || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">Invoice Date: &nbsp;<b>{{api.billingarray_nonincgst.invoicedate || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">State & Code: &nbsp;<b>{{'TamilNadu & 33'}}</b></label>
-          <label  class="text-left form-control" for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
 
       </div>
           </div>
@@ -79,6 +78,8 @@
              <label class="text-right" for="cus_address">Customer Name:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.customername || "xxx"}}</b></label><br>
             <label  for="cus_address">Phone Number:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.phoneumber || "xxx"}}</b></label><br>
             <label  for="cus_address">Address:&nbsp;<b>{{api.billingarray_nonincgst.customerdetails.address || "xxx"}}</b></label><br>
+            <label  for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
+
           </div>
       </div>
           <!-- <div class="col-sm-6">                    
@@ -93,6 +94,7 @@
     <tr>
         <th>Sno</th>
         <th>Description</th>
+        <th>HSNC</th>
       <!-- <th>HSN Code</th>
       <th>Quantity</th>
       <th>Rate</th>
@@ -104,6 +106,7 @@
     <tr *ngFor="let items of api.billingarray_nonincgst.tabledatadet;index as i;">
       <td>{{i+1}} .</td>
       <td>{{ items.productname}}</td>
+      <td>{{ "7113"}}</td>
       <!-- <td>{{items.sareehsncode}}</td>
       <td>{{ items.collected.qty}}</td>
       <td>&#x20B9; {{ items.sareerate}}</td>
