--- a/src/app/sareebillpage/sareebillpage.component.html
+++ b/src/app/sareebillpage/sareebillpage.component.html
@@ -43,7 +43,7 @@
           <span> Salem - 636 001.</span>
         </p>          
         </div>
-    <div class="col-sm-3"> <br>
+    <div class="col-sm-3"><br>
       <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="../../assets/photo/murugan.jpg" style="width:120px;height:120px;">
       </span>
     </div>
@@ -57,8 +57,8 @@
           <input type="text" value="Place of Supply:" class="form-control">
           <input type="text" value="Trasportation Mode:(Own/Hired)" class="form-control"> -->
           
-          <label  class="text-left form-control" for="invoice">Vehicle No: &nbsp;</label>
           <label  class="text-left form-control" for="invoice">Date & Time of Supply: &nbsp;<b>{{dateandtime}}</b></label>
+          <label  class="text-left form-control" for="invoice">Vehicle No: &nbsp;</label>
           <label  class="text-left form-control" for="invoice">Place of Supply: &nbsp;<b></b></label>
           <label  class="text-left form-control" for="invoice">Trasportation Mode:(Own/Hired): &nbsp;<b></b></label>
 
@@ -68,7 +68,6 @@
           <label  class="text-left form-control" for="invoice">Invoice No: &nbsp;<b>{{api.billingarray_sareeprod.invoiceno || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">Invoice Date: &nbsp;<b>{{api.billingarray_sareeprod.invoicedate || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">State & Code: &nbsp;<b>{{'TamilNadu & 33'}}</b></label>
-          <label  class="text-left form-control" for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
 
 
           <!-- <input type="text" value="Invoice No: {{api.billingarray_sareeprod.invoiceno || 'xxx'}}" class="form-control">
@@ -94,6 +93,8 @@
              <label class="text-right" for="cus_address">Customer Name:&nbsp;<b>{{api.billingarray_sareeprod.customerdetails.customername || "xxx"}}</b></label><br>
             <label  for="cus_address">Phone Number:&nbsp;<b>{{api.billingarray_sareeprod.customerdetails.phoneumber || "xxx"}}</b></label><br>
             <label  for="cus_address">Address:&nbsp;<b>{{api.billingarray_sareeprod.customerdetails.address || "xxx"}}</b></label><br>
+            <label  for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
+
           </div>
       </div>
           <!-- <div class="col-sm-6">                    
@@ -119,7 +120,7 @@
     <tr *ngFor="let items of api.billingarray_sareeprod.tabledatadet;index as i;">
       <td>{{i+1}} .</td>
       <td>{{ items.sareeproductname}}</td>
-      <td>{{items.sareehsncode}}</td>
+      <td>{{"5407"}}</td>
       <td>{{ items.collected.qty}}</td>
       <td>&#x20B9; {{ items.sareerate}}</td>
       <td>&#x20B9; {{ items.collected.dis}}</td>
