--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -24,10 +24,10 @@
                         <mat-label>Product Code</mat-label>
                         <input matInput formControlName="sareecode" [readonly]="pcodedisable" required>
                       </mat-form-field>  
-                      <mat-form-field  appearance="outline"  class="example-full-width">
+                      <!-- <mat-form-field  appearance="outline"  class="example-full-width">
                         <mat-label>HSN Code</mat-label>
                         <input matInput formControlName="sareehsncode"  required>
-                      </mat-form-field>  
+                      </mat-form-field>   -->
                       <!-- <mat-form-field appearance="outline"  class="example-full-width">                        
                             <mat-label>Choose a date</mat-label>
                             <input matInput formControlName="date" [matDatepicker]="picker" required>
@@ -58,11 +58,11 @@
                           <td mat-footer-cell *matFooterCellDef>  </td>
                         </ng-container>
                     
-                        <ng-container matColumnDef="sareehsncode">
+                        <!-- <ng-container matColumnDef="sareehsncode">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> Hsn Code </th>
                           <td mat-cell *matCellDef="let customertable"> {{customertable.sareehsncode}} </td>
                           <td mat-footer-cell *matFooterCellDef>  </td>
-                        </ng-container>
+                        </ng-container> -->
 
                         <ng-container matColumnDef="sareeqty">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> Quality </th>
