updated invoice data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,14 @@
         <mat-icon>print</mat-icon>
         <span> Non Included Gst Bill Print</span>
       </button>
+      <button mat-menu-item routerLink="/invoicemonthandyearwise">
+        <mat-icon>print</mat-icon>
+        <span>Month & Year</span>
+      </button>
+      <button mat-menu-item routerLink="/invoicedatewise">
+        <mat-icon>print</mat-icon>
+        <span>DateWise</span>
+      </button>
     </mat-menu>
   </span>
   <span class="fill-remaining-space">SHREE JEYAM SILVERS</span>
