--- a/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
+++ b/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
@@ -29,4 +29,17 @@
                       <div class="example-button-row">                      
                         <button mat-raised-button (click)="monyear()" color="primary">get1</button>
                       </div>
+
                       
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="col-sm-12">
+                            <mat-tab-group>
+                              <mat-tab label="First"> Content 1 </mat-tab>
+                              <mat-tab label="Second"> Content 2 </mat-tab>
+                              <mat-tab label="Third"> Content 3 </mat-tab>
+                            </mat-tab-group>
+                            
+                          </div>                          
+                        </div>
+                      </div>
